--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2-13.c">
+    <ClCompile Include="Debug\3-5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
