--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="단방향연결리스트-삭제.c" />
+    <ClCompile Include="..\..\C_DataStructure\Test\원형리스트.c" />
+    <ClCompile Include="..\..\C_DataStructure\Test\이중연결리스트.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
