--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="단방향연결리스트-삭제.c">
+    <ClCompile Include="..\..\C_DataStructure\Test\원형리스트.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\C_DataStructure\Test\이중연결리스트.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
