삽입,선택,순차,이진,퀵 정렬 완료

--- a/순차탐색/순차탐색.vcxproj.filters
+++ b/순차탐색/순차탐색.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="순차탐색.c">
+    <ClCompile Include="퀵정렬.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
