--- a/순차탐색/순차탐색.vcxproj
+++ b/순차탐색/순차탐색.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="퀵정렬.c" />
+    <ClCompile Include="이진탐색트리의연산.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
